--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,16 @@
       <artifactId>quarkus-arc</artifactId>
     </dependency>
     <dependency>
+      <groupId>io.arrow-kt</groupId>
+      <artifactId>arrow-fx-coroutines-jvm</artifactId>
+      <version>1.1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.arrow-kt</groupId>
+      <artifactId>arrow-core-jvm</artifactId>
+      <version>1.1.2</version>
+    </dependency>
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
