--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 quarkus.minio.url=http://localhost:9000
 quarkus.minio.access-key=minioadmin
 quarkus.minio.secret-key=minioadmin
+quarkus.s3.endpoint-override=http://localhost:9000
+quarkus.s3.aws.region=us-east-1
+quarkus.s3.aws.credentials.type=static
+quarkus.s3.aws.credentials.static-provider.access-key-id=minioadmin
+quarkus.s3.aws.credentials.static-provider.secret-access-key=minioadmin
+quarkus.http.limits.max-body-size=2G
+bucket.name=quarkus.s3.quickstart
